--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "bundle/vim-protobuf"]
 	path = bundle/vim-protobuf
 	url = git://github.com/uarun/vim-protobuf.git
+[submodule "bundle/golang"]
+	path = bundle/golang
+	url = git://github.com/kikito/vim-golang.git
+[submodule "bundle/dart"]
+	path = bundle/dart
+	url = git://github.com/bartlomiejdanek/vim-dart.git
