--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bundle/jsbeautify"]
 	path = bundle/jsbeautify
 	url = git://github.com/vim-scripts/jsbeautify.git
+[submodule "bundle/jslint"]
+	path = bundle/jslint
+	url = git://github.com/douglascrockford/JSLint.git
