Remove bundle/vundle

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 
-[submodule "bundle/vundle"]
-	path = bundle/vundle
-	url = https://github.com/gmarik/vundle.git
+[submodule "vundle"]
+	path = vundle
+	url = https://github.com/gmarik/Vundle.vim.git
